Changing icons used in installer to GNOME ones, like the rest of vector skin. Also fixing Bug 28298 (one border extens a few pixel too much in installer)

--- a/skins/common/config.css
+++ b/skins/common/config.css
@@ -68,7 +68,7 @@
 
 .config-error-box {
 	border: 2px solid #f00;
-	margin: 0.4em;
+	margin: 0.5em;
 	clear: left;
 }
 
